# isaws

./: .gitignore  CMakeLists.txt  README.md
cmake/: CMakeLists.txt  arm_hi3516_environment_settings.cmake  arm_hi3518_environment_settings.cmake  arm_imx6q_environment_settings.cmake  arm_sunxi_v40_environment_settings.cmake  armimx6q_environment_settings.cmake  global_environment_settings.cmake  linux_u1004_environment_settings.cmake  win_vs2010_environment_settings.cmake  win_vs2013_environment_settings.cmake
src/common/: CMakeLists.txt  cshmvideo.cpp  cshmvideo.h  vshm.cpp  vshm.h
src/lib/avplayer/: CMakeLists.txt  avplayer.cpp  avplayer.h  vzplayer.cpp  vzplayer.h
src/lib/base/: CMakeLists.txt  cshmimage.h  cshmvideo.h  stdafx.cpp  stdafx.h  vdatetime.cpp  vdatetime.h  vevent.cpp  vevent.h  vlock.h  vshm.cpp  vshm.h  vthread.cpp  vthread.h  vtls.cpp  vtls.h  vtypes.h
src/lib/base/base/: aes.cpp  aes.h  authmethods.cpp  authmethods.h  base64.cpp  base64.h  helper.cpp  helper.h  md5.h  sha1.cpp  sha1.h
src/lib/base/core/: vblockbuffer.h  vdatetime.cpp  vdatetime.h  vevent.cpp  vlock.cpp  vlock.h  vosinc.h  vshm.cpp  vshm.h  vthread.cpp  vthread.h  vtls.cpp  vtls.h
src/lib/cacheserver/: CMakeLists.txt
src/lib/cacheserver/base/: basedefines.h
src/lib/cacheserver/client/: cachedclient.cpp  cachedclient.h  cachedclient_c.cpp  cachedclient_c.h
src/lib/cacheserver/server/: cachedserver.cpp  cachedserver.h  cachedservice.cpp  cachedservice.h  cachedsession.cpp  cachedsession.h  cachedstanzapool.cpp  cachedstanzapool.h
src/lib/client_hs/: CMakeLists.txt  clistenmessage.cpp  clistenmessage.h
src/lib/client_hs/base/: basedefine.h  cmarkup.cpp  cmarkup.h
src/lib/client_hs/client/: cclientaccess.cpp  cclientaccess.h  cclientdispatch.cpp  cclientdispatch.h  ctcpasyncclient.cpp  ctcpasyncclient.h
src/lib/dev_sunxi_v40/: CMakeLists.txt  ccamera.cpp  ccamera.h  clistenmessage.cpp  clistenmessage.h  cvideocapture.cpp  cvideocapture.h  cvideocodec.cpp  cvideocodec.h  disp.h  drv_display.h  videodev2.h  view.h
src/lib/dispatcher/: CMakeLists.txt
src/lib/dispatcher/base/: dphead.h  pkghead.h
src/lib/dispatcher/client/: CMakeLists.txt
src/lib/dispatcher/dpserver/: dpserver.cpp  dpserver.h  dpsession.cpp  dpsession.h
src/lib/dispatcher/kvdbserver/: kvdbserver.cpp  kvdbserver.h  kvdbsqlite.cpp  kvdbsqlite.h
src/lib/dispatcher/server/: CMakeLists.txt  cdpserver.cpp  cdpserver.h  cjobserver.h  dpserver.cpp  dpserver.h  dpsession.cpp  dpsession.h
src/lib/dispatcher/sync/: cdpclient.cpp  cdpclient.h  cdppollclient.cpp  cdppollclient.h  ckvdbclient.cpp  ckvdbclient.h  dpclient_c.cpp  dpclient_c.h  dplogging.cpp  dplogging.h
src/lib/dispatcher/worker/: CMakeLists.txt
src/lib/inc/: CMakeLists.txt  vboost.h  vdefine.h  verror.h  vtypes.h
src/lib/network/: CMakeLists.txt  cmulticast.cpp  cmulticast.h  csocketinterface.h  vevent.cpp  vevent.h  vsockaccept.cpp  vsockaccept.h  vsockdgram.cpp  vsockdgram.h  vsocket.cpp  vsocket.h  vsockstream.cpp  vsockstream.h  vstreambuffer.cpp  vstreambuffer.h
src/lib/onvif/: CMakeLists.txt
src/lib/onvif/base/: basedefine.h
src/lib/onvif/bm/: base64.c  hqueue.c  hqueue.h  ihash.h  linked_list.c  linked_list.h  ppstack.c  ppstack.h  rc4.h  rfc_md5.cpp  rqueue.h  sha1.c  sys_buf.c  sys_buf.h  sys_inc.h  sys_log.c  sys_os.c  util.c  util.h  word_analyse.c  word_analyse.h
src/lib/onvif/cfgpro/: config.xml  ipsee.txt  json_onvifinfo.cpp  json_onvifinfo.h  onvif_cfgfile_mng.c  onvif_cfgfile_mng.h  onvif_dispatcher.cpp  (+7 more)
src/lib/platform/: CMakeLists.txt  basedefines.h  cextdevevt.h  clistenmessage.cpp  clistenmessage.h  cpcalgctrl.cpp  cpcalgctrl.h  cshmimage.cpp  cshmvideo.cpp  onaction.cpp  ondebug.cpp
src/lib/server/: CMakeLists.txt  csockserver.cpp  csockserver.h
src/lib/sharemem/: CMakeLists.txt  vsem.cpp  vsem.h  vshm.cpp  vshmvideo.cpp  vshmvideo.h
src/lib/syscfg/: CMakeLists.txt  clistenmessage.cpp
src/lib/systemserver/: CMakeLists.txt  clistenmessage.cpp  clistenmessage.h  sysconfig.cpp
src/lib/systemv/: CMakeLists.txt  cshmvideo.cpp  cshmvideo.h  csystemv.cpp  csystemv.h  vz_shm.cpp  vz_shm.h  vzshm_c.cpp  vzshm_c.h
src/lib/vzbase/: CMakeLists.txt
src/lib/vzconn/: CMakeLists.txt
src/lib/vzlogging/: CMakeLists.txt  README.md  vzlogging设计思路.md
src/lib/web_server/: CMakeLists.txt  clistenmessage.cpp  clistenmessage.h  cwebserver.cpp  cwebserver.h
src/run/hi3518e/: CMakeLists.txt  hi3518e_main.cpp
src/run/hi3518ev200/: CMakeLists.txt  hi3518e_main.cpp  pcf8563.cpp
src/run/icamera/: CMakeLists.txt  ch264code.cpp  ch264code.h  icamrea_main.cpp  yuv420.cpp
src/run/iva/: CMakeLists.txt  iva_main.cpp
src/run/live_stream/: CMakeLists.txt  ch264servermediasubsession.cpp  ch264servermediasubsession.h  ch264streamframer.cpp  ch264streamframer.h  clivestream.cpp  clivestream.h  cpcmservermediasubsession.cpp  cpcmservermediasubsession.h  cpcmstreamframer.cpp  cpcmstreamframer.h  main.cpp
src/run/pc_manage/: CMakeLists.txt  appinc.h  main.cpp
src/run/vzlogserver/: CMakeLists.txt  feeddog_main.cpp  module.cfg  vzlogserver_main.cpp
src/web/: CMakeLists.txt  index.html  login.htm  main.htm  main.html  preview.html  vlc_ax.html  vzdevicedesc.xml.file
src/web/cgi-bin/: FileTree.cgi  PlateFileTree.cgi  tar.cgi  update.cgi  update.cgi.nocrc  updateadminfile.cgi  upload.cgi
src/web/htmldata/: AddEditUsers.htm  DeviceGroup.htm  IvsConfig.htm  LiveVideo.htm  Maintenance.htm  PlatePictureView.htm  RestoreConfig.htm  SetAlarm.htm  SetDateTime.htm  SetDeviceAudio.htm  SetNetPort.htm  SetNetPort_old.htm  SetOfflineCharge.htm  SetPlateAudio.htm  SetPlateDeviceIO.htm  SetPlateGateWay.htm  SetRecord.htm  SetVideo.htm  StorgeDeviceMana.htm  Support.htm  WhiteList.htm
src/web/js/: activex.js  aes-ctr.js  ajaxapi.js  canvas-particle.js  devicesupport.js  init.js  jquery-1.11.2.min.js  launch.js  number2ch.js  style.js  testip.js  timer.js  version.js
src/web/page/: cfg_dev_update.html  cfg_devinfo.html  cfg_people_count.html  cfg_set_time.html  cfg_vdo_enc.html  pc_day.html  pc_month.html  pc_year.html  preview.html
(+818 files in other folders)
